# Neurosymbolic-Code-Judge

./: LICENSE  Project.md  README.md  ResearchQuestions.md  benchmark_results-2.5-flash.json  benchmark_results-3.1-pro.json  benchmark_results.json  benchmark_results.md  model_comparison.md  pyproject.toml  requirements.txt  run.py  run_llm_only.py
Old/: benchmark_results-3-flash.json
ResultAnalysis/: benchmark_vs_ground_truth.md  dataset_ground_truth.md  rq_answers.md  thinking_model_analysis.md
ResultAnalysis/Benchmarks/: benchmark_results.json  benchmark_results.md  benchmark_results_3FT.json  benchmark_results_gemini-2.5-flash.json  benchmark_results_gemini-2.5-flash.md  benchmark_results_gemini-3-flash-preview.json  benchmark_results_gemini-3-flash-preview.md  benchmark_results_gemini-3.1-flash-lite-preview.json  benchmark_results_gemini-3.1-flash-lite-preview.md  benchmark_results_gemini-3.1-flash-live-preview.json  benchmark_results_gemini-3.1-flash-live-preview.md
ResultAnalysis/LLMOnly/: llm_only_gemini-2.5-flash.json  (+3 more)
dataset/: 01_binary_search.py  02_factorial.py  03_average.py  03_fibonacci.py  04_is_palindrome.py  05_clamp_clean.py  06_gcd.py  07_max_subarray.py  08_power_clean.py  09_fizzbuzz.py  10_abs_diff.py  11_isqrt.py  12_mod_pow.py  13_count_divisors.py  14_running_total_clean.py  15_is_prime.py  GROUND_TRUTH.md
nsjudge/: ast_ingestion.py  cli.py  compositional.py  config.py  constraint_sandbox.py  orchestrator.py  prompts.py  schemas.py  semantic_translator.py
tests/: test_ast_ingestion.py  test_constraint_sandbox.py  test_orchestrator.py
(+4 files in other folders)
