[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nsjudge"
version = "0.1.0"
description = "Neuro-Symbolic Code Judge: verify Python programs using LLM + Z3"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "z3-solver>=4.13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[project.scripts]
nsjudge = "nsjudge.cli:main"
